# filter

./: .gitignore  CMakeLists.txt  FindTinyXML2.cmake  README.md  ideas.txt
src/: color.cpp  color.h  main.cpp  parse_xml.cpp  parse_xml.h  search_item.h
test/: colors.xml
